# NGP

./: .clangd  .gitignore  Build-BIOS.bat  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  NGP.sln  NGP.sln.licenseheader  README.md
Assets/: blit.ps.d3d11.hlsl  blit.ps.d3d12.hlsl  blit.vs.d3d11.hlsl  blit.vs.d3d12.hlsl
BIOS/: BIOS.asm  DEBUG.h  DISPLAY.h  DMA.h  GU.h  IO.h  MACROS.h  MEMORY.h  start.c  start.ngpl  start.s
Doc/: ABI.md  Boot.md
NGP/: CMakeLists.txt  Header.h  Main.cpp  NGP.vcxproj  NGP.vcxproj.filters  VirtualMachine.h
NGP-Core/: BuildConfig.h  CMakeLists.txt  Emulator.cpp  Emulator.h  NGP-Core.vcxproj  NGP-Core.vcxproj.filters  StringUtility.h
NGP-Core/CPU/: CPU.cpp  CPU.h  CPUCore.cpp  CPUCore.h
NGP-Core/CPU/Asm/Windows/: AdditionalWIN64.inc  BranchConditionalWIN64.inc  FBinaryWIN64.inc  FPWIN64.inc  ImmediateWIN64.inc  InterpreterWIN64.asm  LoadStoreWIN64.inc  LogicalAddSubWIN64.inc  MacrosWIN64.inc  MemoryWIN64.inc  NonBinaryWIN64.inc  UtilityWIN64.inc
NGP-Core/CPU/CPUInterpreter/: CPUInterpreter.cpp  CPUInterpreter.h
NGP-Core/CPU/JIT/X86/: X86JIT.cpp  X86JIT.h  X86JITHelper.h
NGP-Core/CPU/NGPV1/: NGPV1.cpp  NGPV1.h
NGP-Core/Core/: Constants.h  Header.h  JobQueue.h
NGP-Core/FileFormat/: ISA.h  NGPFS.h  Rom.h
NGP-Core/GPU/: Display.h  GPU.cpp  GPU.h
NGP-Core/GPU/Impl/: DisplayWin32.cpp  GPUD12.cpp  GPUD12.h
NGP-Core/IO/: DMA.cpp  DMA.h  IO.cpp  IO.h  IORegisters.h  Pad.cpp  Pad.h
NGP-Core/IO/DMA/: DMA.cpp  DMA.h
NGP-Core/IO/Debug/: Debug.cpp  Debug.h
NGP-Core/IO/Display/: Display.cpp  Display.h
NGP-Core/IO/GU/: GU.cpp  GU.h
NGP-Core/IO/GUDevice/: GUDevice.cpp  GUDevice.h
NGP-Core/IO/IRQ/: IRQ.cpp  IRQ.h
NGP-Core/IO/Pad/: Pad.cpp  Pad.h
NGP-Core/IO/USI/: USI.cpp  USI.h
NGP-Core/Memory/: Bus.cpp  Bus.h  MemoryBus.cpp  MemoryBus.h
NGP-Core/Platform/: Header.h  OS.h  Thread.h  Time.h
NGP-Core/Platform/Impl/: Win32OS.cpp  Win32Thread.cpp  Win32Time.cpp
NGP-Core/Platform/Linux/: LinuxOS.cpp  LinuxThread.cpp  LinuxTime.cpp
NGP-Core/Platform/Win32/: Win32OS.cpp  Win32Thread.cpp  Win32Time.cpp
NGP-Core/Video/: GPU.cpp  GPU.h  GU.cpp  GU.h  GUDevice.cpp  GUDevice.h  Math.h  Window.h
NGP-Core/Video/D3D11/: D3D11GU.cpp  D3D11GU.h
NGP-Core/Video/D3D12/: D3D12GPU.cpp  D3D12GPU.h  D3D12GU.cpp  D3D12GU.h  DX.h
NGP-Core/Video/Impl/: GPUD12.cpp  GPUD12.h  WindowWin32.cpp
NGP-Core/Video/Linux/: LinuxWindow.cpp
NGP-Core/Video/OpenGL/: GLGU.cpp  GLGU.h
NGP-Core/Video/VGU/: VGU.cpp  VGU.h  VGUQueue.cpp  VGUQueue.h  VRasterizer.cpp  VRasterizer.h
NGP-Core/Video/Win32/: Win32Window.cpp
NGP-Core/Video/vGPU/: VGPU.cpp  VGPU.h
NGP/Core/: Constants.h  MemoryBus.cpp  MemoryBus.h  SystemCalls.h  VirtualMachine.cpp  VirtualMachine.h
NGP/Core/Asm/Windows/: BinaryWIN64.inc  BranchConditionalWIN64.inc  FBinaryWIN64.inc  ImmediateWIN64.inc  InterpreterWIN64.asm  MacrosWIN64.inc  MemoryWIN64.inc  UtilityWIN64.inc
NGP/Core/Impl/: SystemCallsWin32.cpp
NGP/FileFormat/: ISA.h  Rom.h  Room.h
NGP/Graphics/: Display.h
NGP/Graphics/Impl/: DisplayWin32.cpp
NGPAS/: CMakeLists.txt  ErrorManager.h  Main.cpp  NGPAS.vcxproj  NGPAS.vcxproj.filters  StringPool.h  SymbolTable.h
NGPAS/Backend/: AssembleDirective.cpp  AssembleInstruction.cpp  Assembler.cpp  Assembler.h  AssemblerUtility.h  Directive.cpp  Eval.cpp  Function.h  Instruction.cpp  Instruction.h
NGPAS/Examples/: another.asm  binary.asm  main.asm  main.ngp  main.ngps  main.s  memory.asm
NGPAS/Frontend/: AsmLexer.cpp  AsmLexer.h  AsmPreProcessor.cpp  AsmPreProcessor.h  AsmToken.h  AsmUtility.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  PreProcessor.cpp  PreProcessor.h  Token.h
NGPC/: CMakeLists.txt  Main.cpp
NGPC/Backend/: CCompiler.cpp  CCompiler.h
NGPC/Frontend/: CLexer.cpp  CLexer.h  CParser.cpp  CParser.h  CPreProcessor.cpp  CPreProcessor.h  CToken.h
NGPFS/: CMakeLists.txt  Main.cpp
Utility/: EncodingUtility.h  ErrorManager.h  StringPool.cpp
include/: gpu.inc  math.inc
include/gpu/: codes.inc  core.inc
include/ngp/: core.inc  exceptions.inc  gpu.inc  input.inc  io.inc  privilage.inc  rom.inc  thread.inc
